gave up on carousel, stored it in galleryslides.js. created a stop-gap in divs in gallery.js

--- a/src/components/css/Gallery.css
+++ b/src/components/css/Gallery.css
@@ -90,3 +90,32 @@ img {
 .gallery .Splash {
   display: none;
 }
+
+.gallery h1 {
+  text-align: center;
+  background-color: black;
+  color: chartreuse;
+}
+
+/* ``````````````````````````````````*/
+.largeGallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.diceLarge {
+  display: flex;
+  justify-content: center;
+}
+
+.smallGallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.diceSmall {
+  display: flex;
+  justify-content: center;
+}
